@@ -15,21 +15,22 @@ module Sidekiq
 end
 
 sidekiq_web_configs = YAML.load_file(File.join(File.dirname(__FILE__), '../variables/sidekiq_web.yml'))
-
 sidekiq_web_config = sidekiq_web_configs[RUBY_ENV]
 SIDEKIQ_WEB = { user: sidekiq_web_config[:username], pass: sidekiq_web_config[:password] }
+
+redis_configs = YAML.load_file(File.join(File.dirname(__FILE__), '../variables/redis.yml'))
+redis_config = redis_configs[RUBY_ENV]
 
 Sidekiq.default_worker_options = { 'backtrace' => true }
 
 Sidekiq.configure_client do |config|
-  config.redis = { namespace: 'pirozhki' }
+  config.redis = redis_config
 end
 
 Sidekiq.configure_server do |config|
-  config.redis = { namespace: 'pirozhki' }
+  config.redis = redis_config
   config.poll_interval = 15
   config.server_middleware do |chain|
     chain.add Sidekiq::Throttler, storage: :redis
   end
 end
-
